[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server built with fastMCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
mcp-server = "mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
